--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "obpgenerator"
-version = "0.0.4"
+version = "0.0.5"
 authors = [
   { name="Anton Wiberg" },
 ]
