--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
 [project]
-name = "obpgenerator"
-version = "0.0.5"
+name = "obpgeneratortest"
+version = "0.0.2"
 authors = [
   { name="Anton Wiberg" },
 ]
