--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,6 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = [
+  "setuptools>=61.0",
+  "wheel"
+]
 build-backend = "setuptools.build_meta"
-
-[project]
-name = "obpgenerator"
-version = "0.0.10"
-authors = [
-  { name="Anton Wiberg" },
-]
-description = "Package for generation of open beam path (obp) files"
-readme = "README.md"
-requires-python = ">=3.7"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
-dynamic = ["dependencies"]
-[tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
-
-[project.urls]
-"Homepage" = "https://github.com/wiberganton/obpgenerator"
-"Bug Tracker" = "https://github.com/wiberganton/obpgenerator/issues"
-
-[tool.setuptools]
-include-package-data = false
