--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = obpgenerator
-version = 0.0.11
+version = 0.0.13
 author = Anton Wiberg
 author_email = wiberg.anton@gmail.com
 description = Generation of open beam path files based on different strategies
@@ -13,6 +13,11 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-packages = find:
+install_requires =
+    svgpathtools
+    numpy
+    matplotlib
+    obplib
+    pyvista
 python_requires = >=3.7
 include_package_data = True
