Working with Parts

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,5 +19,7 @@ install_requires =
     matplotlib
     obplib
     pyvista
+    yaml
+    pyyaml
 python_requires = >=3.7
 include_package_data = True
